--- a/global.css
+++ b/global.css
@@ -12,6 +12,9 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+button{
+  cursor:pointer;
+}
 a {
 	color: rgb(0,100,200);
 	text-decoration: none;
