--- a/global.css
+++ b/global.css
@@ -139,7 +139,9 @@ button:focus {
     display: block;
     height: calc(100% - 45px);
     bottom: 0;
-    left: 0;
+    left: 2%;
+    width: 50%;
+    z-index: 19900;
   }
 
   .navbar-list li {
